--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Programme du samedi 13 juin 2015 </h2>
-                    <h3 class="section-subheading text-muted">Vous désirez savoir comment va se dérouler la journée ? Voici les détails: </h3>
+                    <h3 class="section-subheading text-muted">  <p style="font-size:18px">Vous désirez savoir comment va se dérouler la journée ? Voici les détails: </p></h3>
                 </div>
             </div>
             <div class="row text-center">
