--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,8 @@
 
                     </h4>
 
-                    <h3 class="section-subheading" style="line-height:150%"> Cliquez sur les plans d'accès afin d'obtenir le plan google map correspondant. Pour télécharger un pdf incluant les adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a>  <br> Notez que, si vous désirez faire les trajets en train (bonne chance...), le dernier voyage en direction de Liège partira de Comblain à 22h00, le suivant le lendemain à 8h00. </h3>
+                    <h3 class="section-subheading" style="line-height:150%"> Cliquez sur les plans d'accès afin d'obtenir le plan google map correspondant. Pour télécharger un pdf incluant les adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a>  <br> Notez que, si vous désirez faire les trajets en train (bonne chance...), le dernier voyage en direction de Liège partira de Comblain à 22h00, le suivant le lendemain à 8h00. <strong>Une solution plus pratique ? <a href="http://www.lerocherdelavierge.be/fr/" target="_blank"> Des emplacements de camping sont disponibles à 300 mètres de la salle saint-Roch. </a></strong>  Idéal pour faire la fête jusqu'au boût de la nuit et rentrer en toute sécurité... 
+                    </h3>
                     
                 </div>
             </div>
