--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,10 +16,14 @@
 
                       <br>
                          
-                        <h2 class="section-heading">   </h2>
+                        
 
 
-                          <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage">  <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
+                          <br> <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage">  <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
+
+
+                 <h3> <p style="font-size:12px"> Si vous rencontrez des problèmes avec le formulaire de contact, <br> vous pouvez également confirmer votre venue en répondant à notre e-mail initial. </p></h3>
+
 
                 </div>
 
